Fixes wonky scrollbars when zoomed in

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -206,7 +206,15 @@ h1 {
   & > .zoomable {
     overflow: auto;
     -webkit-overflow-scrolling: touch;
-    @include size(1);
+    width: 100%;
+    height: 100%;
+
+    & > .zoomable-content {
+      position: static;
+      width: auto;
+      height: auto;
+      transform: none;
+    }
   }
 }
 
